--- a/5.1.1.1.1.1.html
+++ b/5.1.1.1.1.1.html
@@ -12,6 +12,7 @@
     <title>Administrador Virtual</title>
 
     <link href="less/avi.less" rel="stylesheet/less">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
@@ -79,7 +80,16 @@
             <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Clientes<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Configuración clientes</a></li>
+                  <li><strong>Configuración clientes</strong></li>
+                  <li><a href="#">Información cliente</a></li>
+                  <li><a href="#">Servicios globales</a></li>
+                  <li><a href="#">Configuración</a></li>
+                  <li><a href="#">Modificar clave</a></li>
+                  <li><a href="#">Búsqueda de cliente</a></li>
+                  <li><a href="#">Transacciones de clientes</a></li>
+                  <li><a href="#">Crear líneas</a></li>
+                  <li><a href="#">Ayuda</a></li>
+                  <li role="separator" class="divider"></li>
                   <li><a href="#">Administración</a></li>
                 </ul>
             </li>
@@ -109,76 +119,75 @@
 
       <ol class="breadcrumb">
         <li><a href="#">Home</a></li>
-        <li class="active">Configuración de clientes</li>
+        <li><a href="clients.html">Configuración de clientes</a></li>
+        <li><a href="clients-results.html">Resultado de clientes</a></li>
+        <li class="active">Omnisport Movil</li>
       </ol>
       <div class="row">
         <div class="col-sm-12">
-          <h2>Búsqueda de clientes</h2>
-        </div>
-        <div class="col-sm-12">
-          <form class="row">
-            <div class="col-sm-12">
-              <div class="form-group">
-                <label>Búsqueda por orden alfabético</label>
-                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                  <div class="btn-group" role="group" aria-label="First group"> 
-                    <button type="button" class="btn btn-default">A</button>
-                    <button type="button" class="btn btn-default">B</button>
-                    <button type="button" class="btn btn-default">C</button>
-                    <button type="button" class="btn btn-default">D</button>
-                    <button type="button" class="btn btn-default">E</button>
-                    <button type="button" class="btn btn-default">F</button>
-                    <button type="button" class="btn btn-default">G</button>
-                    <button type="button" class="btn btn-default">H</button>
-                    <button type="button" class="btn btn-default">I</button>
-                    <button type="button" class="btn btn-default">J</button>
-                    <button type="button" class="btn btn-default">K</button>
-                    <button type="button" class="btn btn-default">L</button>
-                    <button type="button" class="btn btn-default">M</button>
-                    <button type="button" class="btn btn-default">N</button>
-                    <button type="button" class="btn btn-default">O</button>
-                    <button type="button" class="btn btn-default">P</button>
-                    <button type="button" class="btn btn-default">Q</button>
-                    <button type="button" class="btn btn-default">R</button>
-                    <button type="button" class="btn btn-default">S</button>
-                    <button type="button" class="btn btn-default">T</button>
-                    <button type="button" class="btn btn-default">U</button>
-                    <button type="button" class="btn btn-default">V</button>
-                    <button type="button" class="btn btn-default">W</button>
-                    <button type="button" class="btn btn-default">Y</button>
-                    <button type="button" class="btn btn-default">X</button>
-                    <button type="button" class="btn btn-default">Z</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-10">
-              <div class="panel panel-default">
-                <div class="panel-body">
-                  <div class="row">
-                    <div class="form-group col-sm-6">
-                      <label for="1">Identificador tributario</label>
-                      <input type="email" class="form-control" id="1" placeholder="Ej: 73.778.987-9">
-                    </div>
-                    <div class="form-group col-sm-6">
-                      <label for="2">Teléfono</label>
-                      <input type="text" class="form-control" id="2" placeholder="Ej.: +56 22 4556789">
-                    </div>
-                    <div class="form-group col-sm-6">
-                      <label for="3">Nombre</label>
-                      <input type="text" class="form-control" id="3" placeholder="Ej.: Genaro Arriagada">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-12">
-              <a class="btn btn-default btn-primary" href="5.1.1.html">Buscar</a>
-            </div>
-          </form>
+          <h2>Datos de controles</h2>
         </div>
       </div>
-
+      <!-- /panel info cliente -->
+      <ul class="list-group col-md-10">
+        <li class="list-group-item">
+          <div class="row">
+              <div class="col-md-6">
+                <label>Línea</label> <br>50376033600
+              </div>
+              <div class="col-md-6">
+                <label>Nombre usuario</label> <br>Subscriptor 70690329
+              </div>
+          </div>
+        </li>
+        <li class="list-group-item">
+          <div class="row">
+              <div class="col-md-12">
+                <label>Perfil</label> <br>Saldo $20.00
+              </div>
+          </div>
+        </li>
+        <li class="list-group-item">
+          <div class="row">
+              <div class="col-md-12">
+                <div class="table-responsive">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th>Controles</th>
+                        <th colspan="2">Estado</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Control Destino</td>
+                        <td>Habilitado</td>
+                        <td><input type="checkbox" value=""></td>
+                      </tr>
+                      <tr>
+                        <td>Control Horario</td>
+                        <td>Habilitado</td>
+                        <td><input type="checkbox" value=""></td>
+                      </tr>
+                      <tr>
+                        <td>Ceunta Controlada</td>
+                        <td>Habilitado</td>
+                        <td><input type="checkbox" value=""></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+          </div>
+        </li>
+      </ul>
+      <!-- /panel info cliente -->
+      <div class="row">
+        <div class="col-sm-12">
+          <a class="btn btn-default btn-primary" href="#.html">Guardar</a>
+          <a class="btn btn-default btn-default" href="5.1.1.1.1.html">Volver</a>
+        </div>
+      </div>
 
     </div> <!-- /container -->
 
@@ -189,6 +198,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/dropdown.js"></script>
     <script src="js/button.js"></script>
+    <script src="js/navs.js"></script>
+    <script src="js/tabs.js"></script>
     <script src="js/less.js"></script>
 
     <script type="text/javascript">
