--- a/5.1.1.1.1.html
+++ b/5.1.1.1.1.html
@@ -12,6 +12,7 @@
     <title>Administrador Virtual</title>
 
     <link href="less/avi.less" rel="stylesheet/less">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
@@ -109,73 +110,68 @@
 
       <ol class="breadcrumb">
         <li><a href="#">Home</a></li>
-        <li class="active">Configuración de clientes</li>
+        <li><a href="clients.html">Configuración de clientes</a></li>
+        <li class="active">Resultado de clientes</li>
       </ol>
+
       <div class="row">
         <div class="col-sm-12">
-          <h2>Búsqueda de clientes</h2>
+          <h2>Resultado búsqueda de líneas</h2>
+        </div>
+        <div class="col-sm-10">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="table-responsive">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th>Nº de líneas</th>
+                      <th>Usuario asociado</th>
+                      <th>Perfil asignado</th>
+                      <th class="text-center">Controles</th>
+                      <th class="text-center">Ajuste de límite</th>
+                      <th class="text-center">Información de servicio</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>50376033600</td>
+                      <td>Subscriptor 70690329</td>
+                      <td>Saldo $20.00</td>
+                      <td class="text-center">
+                        <a href="#.html" class="btn btn-default btn-xs" data-toggle="tooltip" title="Activación y Desactivación de controles">
+                          <i class="fa fa-lock"></i>
+                        <a/>
+                      </td>
+                      <td class="text-center">
+                        <a href="#.html" class="btn btn-default btn-xs" data-toggle="tooltip" title="Ajuste de límite">
+                          <i class="fa fa-tachometer"></i>
+                        <a/>
+                      </td>
+                      <td class="text-center">
+                        <a href="#.html" class="btn btn-default btn-xs" data-toggle="tooltip" title="Llamadas">
+                          <i class="fa fa-mobile"></i>
+                        <a/>
+                        <a href="#.html" class="btn btn-default btn-xs" data-toggle="tooltip" title="Transacciones">
+                          <i class="fa fa-shopping-cart"></i>
+                        <a/>
+                        <a href="#.html" class="btn btn-default btn-xs" data-toggle="tooltip" title="Detalle cuenta">
+                          <i class="fa fa-sticky-note-o"></i>
+                        <a/>
+                        <a href="#.html" class="btn btn-default btn-xs" data-toggle="tooltip" title="Línea">
+                          <i class="fa fa-phone"></i>
+                        <a/>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="col-sm-12">
-          <form class="row">
-            <div class="col-sm-12">
-              <div class="form-group">
-                <label>Búsqueda por orden alfabético</label>
-                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                  <div class="btn-group" role="group" aria-label="First group"> 
-                    <button type="button" class="btn btn-default">A</button>
-                    <button type="button" class="btn btn-default">B</button>
-                    <button type="button" class="btn btn-default">C</button>
-                    <button type="button" class="btn btn-default">D</button>
-                    <button type="button" class="btn btn-default">E</button>
-                    <button type="button" class="btn btn-default">F</button>
-                    <button type="button" class="btn btn-default">G</button>
-                    <button type="button" class="btn btn-default">H</button>
-                    <button type="button" class="btn btn-default">I</button>
-                    <button type="button" class="btn btn-default">J</button>
-                    <button type="button" class="btn btn-default">K</button>
-                    <button type="button" class="btn btn-default">L</button>
-                    <button type="button" class="btn btn-default">M</button>
-                    <button type="button" class="btn btn-default">N</button>
-                    <button type="button" class="btn btn-default">O</button>
-                    <button type="button" class="btn btn-default">P</button>
-                    <button type="button" class="btn btn-default">Q</button>
-                    <button type="button" class="btn btn-default">R</button>
-                    <button type="button" class="btn btn-default">S</button>
-                    <button type="button" class="btn btn-default">T</button>
-                    <button type="button" class="btn btn-default">U</button>
-                    <button type="button" class="btn btn-default">V</button>
-                    <button type="button" class="btn btn-default">W</button>
-                    <button type="button" class="btn btn-default">Y</button>
-                    <button type="button" class="btn btn-default">X</button>
-                    <button type="button" class="btn btn-default">Z</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-10">
-              <div class="panel panel-default">
-                <div class="panel-body">
-                  <div class="row">
-                    <div class="form-group col-sm-6">
-                      <label for="1">Identificador tributario</label>
-                      <input type="email" class="form-control" id="1" placeholder="Ej: 73.778.987-9">
-                    </div>
-                    <div class="form-group col-sm-6">
-                      <label for="2">Teléfono</label>
-                      <input type="text" class="form-control" id="2" placeholder="Ej.: +56 22 4556789">
-                    </div>
-                    <div class="form-group col-sm-6">
-                      <label for="3">Nombre</label>
-                      <input type="text" class="form-control" id="3" placeholder="Ej.: Genaro Arriagada">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-12">
-              <a class="btn btn-default btn-primary" href="5.1.1.html">Buscar</a>
-            </div>
-          </form>
+          <a class="btn btn-default" href="5.1.1.html">Volver</a>
+          <a class="" href="#.html">Ver listado completo</a>
         </div>
       </div>
 
@@ -189,12 +185,13 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/dropdown.js"></script>
     <script src="js/button.js"></script>
+    <script src="js/tooltip.js"></script>
     <script src="js/less.js"></script>
 
     <script type="text/javascript">
       jQuery( document ).ready(function( $ ) {
         $( ".dropdown-toggle" ).dropdown();
-        //alert("I am an alert box!");
+        $('[data-toggle="tooltip"]').tooltip();
       });
     </script>
 </html>
