--- a/5.1.1.1.html
+++ b/5.1.1.1.html
@@ -121,11 +121,11 @@
         <li><a href="#">Home</a></li>
         <li><a href="clients.html">Configuración de clientes</a></li>
         <li><a href="clients-results.html">Resultado de clientes</a></li>
-        <li class="active">Información del cliente</li>
+        <li class="active">Omnisport Movil</li>
       </ol>
 
       <!-- /panel info cliente -->
-      <ul class="list-group col-md-7">
+      <ul class="list-group col-md-10">
         <li class="list-group-item">
           <div class="row">
               <div class="col-md-6">
@@ -161,28 +161,31 @@
       <!-- /panel info cliente -->
 
       <div class="row">
-        <div class="col-sm-7">
+        <div class="col-sm-10">
           <h3>Búsqueda de línea</h3>
         </div>
-
-        <div class="col-sm-7">
-          <div class="row">
-            <div class="form-group col-sm-6">
-              <label for="1">línea</label>
-              <input type="text" class="form-control" id="1" placeholder="Ej: 73.778.987-9">
-            </div>
-            <div class="form-group col-sm-6">
-              <label for="2">Nombre usuario</label>
-              <input type="text" class="form-control" id="2" placeholder="Ej.: +56 22 4556789">
+        <div class="col-sm-10">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="row">
+                <div class="form-group col-sm-6">
+                  <label for="1">línea</label>
+                  <input type="text" class="form-control" id="1" placeholder="Ej: 73.778.987-9">
+                </div>
+                <div class="form-group col-sm-6">
+                  <label for="2">Nombre usuario</label>
+                  <input type="text" class="form-control" id="2" placeholder="Ej.: +56 22 4556789">
+                </div>
+                <div class="form-group col-sm-6">
+                  <label for="3">Perfil</label>
+                  <input type="text" class="form-control" id="3" placeholder="Ej.: Genaro Arriagada">
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="form-group col-sm-7">
-          <label for="3">Perfil</label>
-          <input type="text" class="form-control" id="3" placeholder="Ej.: Genaro Arriagada">
-        </div>
         <div class="col-sm-12">
-          <a class="btn btn-default btn-primary" href="5.1.1.2.html">Buscar</a>
+          <a class="btn btn-default btn-primary" href="5.1.1.1.1.html">Buscar</a>
         </div>
 
     </div> <!-- /container -->
