--- a/5.1.1.html
+++ b/5.1.1.html
@@ -118,7 +118,7 @@
         <div class="col-sm-12">
           <h2>Resultado búsqueda de clientes</h2>
         </div>
-        <div class="col-sm-7">
+        <div class="col-sm-10">
           <div class="panel panel-default">
             <div class="panel-body">
               <div class="table-responsive">
@@ -137,13 +137,13 @@
                       <td>Omnisport VPN</td>
                       <td></td>
                       <td>
-                        <a href="5.1.1.2.html" class="btn btn-default btn-xs">
+                        <a href="5.1.1.2.html" class="btn btn-default btn-xs" data-toggle="tooltip" title="Modificar">
                           <i class="fa fa-pencil"></i>
                         <a/>
-                        <a href="#" class="btn btn-default btn-xs">
+                        <a href="#" class="btn btn-default btn-xs" data-toggle="tooltip" title="Eliminar">
                           <i class="fa fa-trash"></i>
                         <a/>
-                        <a href="#" class="btn btn-default btn-xs">
+                        <a href="5.1.1.3.html" class="btn btn-default btn-xs" data-toggle="tooltip" title="Servicios">
                           <i class="fa fa-cogs"></i>
                         <a/>
                       </td>
@@ -169,12 +169,13 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/dropdown.js"></script>
     <script src="js/button.js"></script>
+    <script src="js/tooltip.js"></script>
     <script src="js/less.js"></script>
 
     <script type="text/javascript">
       jQuery( document ).ready(function( $ ) {
         $( ".dropdown-toggle" ).dropdown();
-        //alert("I am an alert box!");
+        $('[data-toggle="tooltip"]').tooltip();
       });
     </script>
 </html>
